// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditDocumentNoteForm \`nodeType\` is \`invoice\` \`isCreate\` is \`false\` default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        data-testid="EditDocumentNoteForm"
      >
        <div
          class="PicassoModalTitle-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2"
          >
            Update note for Invoice #
          </h2>
        </div>
        <div
          class="PicassoModalContent-wrapper"
        >
          <div
            class="PicassoModalContent-modalContent"
          >
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="EditDocumentNoteForm-note"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-rootMultiline PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth Mui-focused Mui-focused PicassoOutlinedInput-focused MuiInputBase-multiline MuiOutlinedInput-multiline MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <textarea
                  aria-invalid="false"
                  autocomplete="none"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="note"
                  name="note"
                  placeholder="A note with additional details for the client."
                  rows="4"
                  style="height: 0px; overflow: hidden;"
                >
                  abc
                </textarea>
                <textarea
                  aria-hidden="true"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="InvoiceModalVariations"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
            data-component-type="button"
            data-testid="submit"
            tabindex="0"
            type="submit"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Update
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`EditDocumentNoteForm \`nodeType\` is \`invoice\` \`isCreate\` is \`true\` default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        data-testid="EditDocumentNoteForm"
      >
        <div
          class="PicassoModalTitle-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2"
          >
            Create note for Invoice #
          </h2>
        </div>
        <div
          class="PicassoModalContent-wrapper"
        >
          <div
            class="PicassoModalContent-modalContent"
          >
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="EditDocumentNoteForm-note"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-rootMultiline PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth Mui-focused Mui-focused PicassoOutlinedInput-focused MuiInputBase-multiline MuiOutlinedInput-multiline MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <textarea
                  aria-invalid="false"
                  autocomplete="none"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="note"
                  name="note"
                  placeholder="A note with additional details for the client."
                  rows="4"
                  style="height: 0px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="InvoiceModalVariations"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
            data-component-type="button"
            data-testid="submit"
            tabindex="0"
            type="submit"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Create
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`EditDocumentNoteForm \`nodeType\` is \`payment\` \`isCreate\` is \`false\` default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        data-testid="EditDocumentNoteForm"
      >
        <div
          class="PicassoModalTitle-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2"
          >
            Update note for Notice of Payment #
          </h2>
        </div>
        <div
          class="PicassoModalContent-wrapper"
        >
          <div
            class="PicassoModalContent-modalContent"
          >
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="EditDocumentNoteForm-note"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-rootMultiline PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth Mui-focused Mui-focused PicassoOutlinedInput-focused MuiInputBase-multiline MuiOutlinedInput-multiline MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <textarea
                  aria-invalid="false"
                  autocomplete="none"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="note"
                  name="note"
                  placeholder="A note with additional details for the payee."
                  rows="4"
                  style="height: 0px; overflow: hidden;"
                >
                  abc
                </textarea>
                <textarea
                  aria-hidden="true"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="InvoiceModalVariations"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
            data-component-type="button"
            data-testid="submit"
            tabindex="0"
            type="submit"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Update
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`EditDocumentNoteForm \`nodeType\` is \`payment\` \`isCreate\` is \`true\` default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        data-testid="EditDocumentNoteForm"
      >
        <div
          class="PicassoModalTitle-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2"
          >
            Create note for Notice of Payment #
          </h2>
        </div>
        <div
          class="PicassoModalContent-wrapper"
        >
          <div
            class="PicassoModalContent-modalContent"
          >
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="EditDocumentNoteForm-note"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-rootMultiline PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth Mui-focused Mui-focused PicassoOutlinedInput-focused MuiInputBase-multiline MuiOutlinedInput-multiline MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <textarea
                  aria-invalid="false"
                  autocomplete="none"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="note"
                  name="note"
                  placeholder="A note with additional details for the payee."
                  rows="4"
                  style="height: 0px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="InvoiceModalVariations"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
            data-component-type="button"
            data-testid="submit"
            tabindex="0"
            type="submit"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Create
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
